// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmptyScreen for practice questions EmptyScreenStatus renders status message without next section button 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  margin: 2rem auto;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-align: center;
  color: #424242;
  font-size: 1.6rem;
  line-height: 2.5rem;
}

.c1 {
  margin-bottom: -1rem;
  max-width: 38rem;
  overflow: initial;
}

<div
  className="c0"
>
  <span
    className="c1"
  >
    There are no questions for this chapter/section.
  </span>
</div>
`;

exports[`EmptyScreen for practice questions renders properly and dispatches action on click 1`] = `
.c1 {
  max-width: 38rem;
  overflow: initial;
}

.c1 .c5 {
  margin: 4rem auto;
}

.c2 {
  color: #424242;
  font-size: 1.6rem;
  line-height: 2.5rem;
}

.c3 {
  display: inline;
}

.c4 {
  font-weight: 700;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  margin: 2rem auto;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-align: center;
  color: #424242;
  font-size: 1.6rem;
  line-height: 2.5rem;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <span
        className="c3"
      >
        Select a section from the dropdown above or continue to 
      </span>
      <span
        className="c4"
        dangerouslySetInnerHTML={
          Object {
            "__html": "some title",
          }
        }
      />
    </div>
    <button
      className="button button-primary button-large c5 "
      data-analytics-label="Continue (Empty Screen)"
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "--button-default-active": "#e5e5e5",
          "--button-default-border": "#d5d5d5",
          "--button-default-color": "#fff",
          "--button-default-foreground": "#5e6062",
          "--button-default-hover": "#fafafa",
          "--button-disabled-color": "#f1f1f1",
          "--button-disabled-foreground": "#c1c1c1",
          "--button-focus-outline": "#fff",
          "--button-focus-shadow": "#000",
          "--button-primary-active": "#b03808",
          "--button-primary-color": "#d4450c",
          "--button-primary-foreground": "#fff",
          "--button-primary-hover": "#be3c08",
          "--button-secondary-active": "#818181",
          "--button-secondary-color": "#949494",
          "--button-secondary-foreground": "#fff",
          "--button-secondary-hover": "#8b8b8b",
          "--button-transparent-color": "#027EB5",
        }
      }
    >
      Continue
    </button>
  </div>
</div>
`;
